tests-integration/tests/roundtrip/invalid/semantic_errors/typecheck/bool_var_in_arith_expr/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic_errors/typecheck/bool_var_in_arith_expr/bool_var_in_arith_expr.essence:3:15:
  |
3 | such that 4 + x = y
  |               ^
Type error:
	Expected: int
	Got: bool